Fix grid view text wrapping bugs.

--- a/styles/search.styl
+++ b/styles/search.styl
@@ -70,17 +70,15 @@
   display: inline-block
   width: 50%
   text-align: center
+  vertical-align: top
+
+  .item-preview-text
+    margin: 12px 0
 
   .item-preview-image
     float: none
     max-width: 100%
     margin: 0 auto
-
-  .price
-    position: absolute
-    bottom: 0
-    left: 0
-    width: 100%
 
   .name
     display: none
@@ -145,7 +143,7 @@
     vertical-align: middle
 
   .grid
-    .item-preview, .stars, .item-preview-image, .item-preview-text
+    .item-preview, .item-preview-image, .item-preview-text
       display: block
 
 @media all and (min-width: 800px)
